browser/base/content/browser.css
/* ... */
panelview
:
not
(
[
visible
]
)
{
visibility
:
collapse
;
}
/
*
Hide
the
header
when
a
subview
is
reused
as
a
main
view
.
*
/
panelview
[
mainview
]
>
.
panel
-
header
{
display
:
none
;
}
.
panel
-
viewcontainer
{
overflow
:
hidden
;
}
.
panel
-
viewcontainer
[
panelopen
]
{
transition
-
property
:
height
;
transition
-
timing
-
function
:
var
(
-
-
animation
-
easing
-
function
)
;
transition
-
duration
:
var
(
-
-
panelui
-
subview
-
transition
-
duration
)
;
will
-
change
:
height
;
}
.
panel
-
viewcontainer
.
offscreen
{
position
:
absolute
;
}
.
panel
-
viewstack
{
overflow
:
visible
;
transition
:
height
var
(
-
-
panelui
-
subview
-
transition
-
duration
)
;
}
#
tabbrowser
-
tabs
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tabs
"
)
;
}
supports
-
moz
-
bool
-
pref
(
"
layout
.
css
.
emulate
-
moz
-
box
-
with
-
flex
"
)
{
#
tabbrowser
-
tabs
{
/
*
Without
this
the
tabs
container
width
extends
beyond
the
window
width
*
/
width
:
0
;
}
.
tab
-
stack
{
/
*
Without
this
pinned
tabs
get
a
bit
too
tall
when
the
tabstrip
overflows
.
*
/
vertical
-
align
:
top
;
}
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
:
not
(
[
hashiddentabs
]
)
~
#
alltabs
-
button
#
tabbrowser
-
tabs
[
hasadjacentnewtabbutton
]
:
not
(
[
overflow
=
"
true
"
]
)
~
#
new
-
tab
-
button
#
tabbrowser
-
tabs
[
overflow
=
"
true
"
]
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
tabbrowser
-
tabs
:
not
(
[
hasadjacentnewtabbutton
]
)
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
TabsToolbar
[
customizing
=
"
true
"
]
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
{
visibility
:
collapse
;
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
[
using
-
closing
-
tabs
-
spacer
]
~
#
alltabs
-
button
{
visibility
:
hidden
;
/
*
temporary
space
to
keep
a
tab
'
s
close
button
under
the
cursor
*
/
}
.
tabbrowser
-
tab
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tab
"
)
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
{
-
moz
-
box
-
flex
:
100
;
max
-
width
:
225px
;
min
-
width
:
var
(
-
-
tab
-
min
-
width
)
;
width
:
0
;
transition
:
min
-
width
100ms
ease
-
out
max
-
width
100ms
ease
-
out
;
}
:
root
[
uidensity
=
touch
]
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
{
/
*
Touch
mode
needs
additional
space
for
the
close
button
.
*
/
min
-
width
:
calc
(
var
(
-
-
tab
-
min
-
width
)
+
10px
)
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
:
not
(
[
fadein
]
)
{
max
-
width
:
0
.
1px
;
min
-
width
:
0
.
1px
;
visibility
:
hidden
;
}
.
tab
-
close
-
button
.
tabbrowser
-
tab
:
:
after
.
tab
-
background
{
/
*
Explicitly
set
the
visibility
to
override
the
value
(
collapsed
)
*
we
inherit
from
#
TabsToolbar
[
collapsed
]
upon
opening
a
browser
window
.
*
/
visibility
:
visible
;
}
.
tab
-
close
-
button
[
fadein
]
.
tabbrowser
-
tab
[
fadein
]
:
:
after
.
tab
-
background
[
fadein
]
{
/
*
This
transition
is
only
wanted
for
opening
tabs
.
*
/
transition
:
visibility
0ms
25ms
;
}
.
tab
-
close
-
button
:
not
(
[
fadein
]
)
.
tabbrowser
-
tab
:
not
(
[
fadein
]
)
:
:
after
.
tab
-
background
:
not
(
[
fadein
]
)
{
visibility
:
hidden
;
}
.
tab
-
label
:
not
(
[
fadein
]
)
.
tab
-
throbber
:
not
(
[
fadein
]
)
.
tab
-
throbber
-
fallback
:
not
(
[
fadein
]
)
.
tab
-
icon
-
image
:
not
(
[
fadein
]
)
{
display
:
none
;
}
%
ifdef
NIGHTLY_BUILD
supports
-
moz
-
bool
-
pref
(
"
browser
.
tabs
.
hideThrobber
"
)
{
.
tab
-
throbber
.
tab
-
throbber
-
fallback
{
display
:
none
;
}
}
%
endif
#
tabbrowser
-
tabs
[
positionpinnedtabs
]
>
.
tabbrowser
-
tab
[
pinned
]
{
position
:
fixed
!
important
;
display
:
block
;
/
*
position
:
fixed
already
does
this
(
bug
579776
)
but
let
'
s
be
explicit
*
/
}
#
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
selected
]
{
position
:
relative
;
z
-
index
:
2
;
pointer
-
events
:
none
;
/
*
avoid
blocking
dragover
events
on
scroll
buttons
*
/
}
.
tabbrowser
-
tab
[
tabdrop
-
samewindow
]
#
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
fadein
]
:
not
(
[
selected
]
)
{
transition
:
transform
200ms
var
(
-
-
animation
-
easing
-
function
)
;
}
/
*
The
next
3
rules
allow
dragging
tabs
slightly
outside
of
the
tabstrip
*
to
make
it
easier
to
drag
tabs
.
*
/
#
TabsToolbar
[
movingtab
]
{
padding
-
bottom
:
15px
;
}
#
TabsToolbar
[
movingtab
]
>
#
tabbrowser
-
tabs
{
padding
-
bottom
:
15px
;
margin
-
bottom
:
-
15px
;
}
#
TabsToolbar
[
movingtab
]
+
#
nav
-
bar
{
margin
-
top
:
-
15px
;
pointer
-
events
:
none
;
}
/
*
Allow
dropping
a
tab
on
buttons
with
associated
drop
actions
.
*
/
#
TabsToolbar
[
movingtab
]
+
#
nav
-
bar
>
#
nav
-
bar
-
customization
-
target
>
#
personal
-
bookmarks
#
TabsToolbar
[
movingtab
]
+
#
nav
-
bar
>
#
nav
-
bar
-
customization
-
target
>
#
home
-
button
#
TabsToolbar
[
movingtab
]
+
#
nav
-
bar
>
#
nav
-
bar
-
customization
-
target
>
#
downloads
-
button
#
TabsToolbar
[
movingtab
]
+
#
nav
-
bar
>
#
nav
-
bar
-
customization
-
target
>
#
bookmarks
-
menu
-
button
{
pointer
-
events
:
auto
;
}
.
new
-
tab
-
popup
#
alltabs
-
popup
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
alltabs
-
popup
"
)
;
}
toolbar
[
printpreview
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
printPreviewBindings
.
xml
#
printpreviewtoolbar
"
)
;
}
toolbar
[
overflowable
]
>
.
customization
-
target
{
overflow
:
hidden
;
}
toolbar
:
not
(
[
overflowing
]
)
>
.
overflow
-
button
toolbar
[
customizing
]
>
.
overflow
-
button
{
display
:
none
;
}
window
:
not
(
[
chromehidden
~
=
"
toolbar
"
]
)
#
nav
-
bar
[
nonemptyoverflow
]
>
.
overflow
-
button
#
nav
-
bar
[
customizing
]
>
.
overflow
-
button
{
display
:
-
moz
-
box
;
}
/* ... */

