Bug 1453954 - Stop collapsing the tabs toolbar by default. r=johannh
MozReview-Commit-ID: 2ZSGptrzwSC

UltraBlame original commit: 37c73a2ce762bdc99cc946914193ae55cffe4cfb

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1330,59 +1330,6 @@ tab
 close
 -
 button
-.
-tabbrowser
--
-tab
-:
-:
-after
-.
-tab
--
-background
-{
-/
-*
-Explicitly
-set
-the
-visibility
-to
-override
-the
-value
-(
-collapsed
-)
-*
-we
-inherit
-from
-#
-TabsToolbar
-[
-collapsed
-]
-upon
-opening
-a
-browser
-window
-.
-*
-/
-visibility
-:
-visible
-;
-}
-.
-tab
--
-close
--
-button
 [
 fadein
 ]
